2005-06-06  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Settings_Daemon.server.in: added name and description
	to the object information.

2005-06-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* actions/Makefile.am:
	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute), (update_state),
	(acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume):
	  Fix mute handling, particularly for devices without hardware
	  mute support or with applications that use volume=0 for mute.
	  Also fix the fact that we linked against all of ALSA, OSS and
	  GStreamer if they were all available; default to GStreamer.
	  Fixes #306036.

2005-06-03  Anders Carlsson  <andersca@imendio.com>

	* Makefile.am:
	* clipboard-manager.c:
	* clipboard-manager.h:
	* list.c:
	* list.h:
	* xutils.c
	* xutils.h:
	Add clipboard manager files.
	
	* gnome-settings-daemon.c: (clipboard_manager_terminate_cb),
	(clipboard_manager_event_filter), (clipboard_manager_watch_cb),
	(finalize), (gnome_settings_daemon_new):
	Use clipboard manager for persistent clipboard storage.
	
2005-05-11  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c: list "Gtk/MenuBarAccel", allow to 
	configure the menubar shortcut (Closes: #120859).

2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-accessibility-keyboard.c: (set_server_from_gconf),
	(set_gconf_from_server): Plug a couple of leaks.

2005-02-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-settings-multimedia-keys.c: (do_www_action):
	Don't set any url when starting browser.

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (gnome_settings_chk_file_list):
	patch by Kjartan Maraas <kmaraas@gnome.org> to fix a leak
	(Closes: #166796).

2005-02-03  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fix #165018

2005-02-01  Elijah Newren  <newren@gmail.com>

	* gnome-settings-xmodmap.h: