@@ -1,3 +1,10 @@
+2005-03-23  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c: make sticky keys and slow
+	keys dialog more HIG compliant and usable (selectable text, no
+	separator, making ESC key close the dialog, separation between
+	widgets, etc...)
+
 2005-06-06  Rodrigo Moya <rodrigo@novell.com>
 
 	* GNOME_Settings_Daemon.server.in: added name and description
